--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -4,4 +4,21 @@
   overflow: hidden;
   background: #ccc;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img.none {
+    opacity: 0;
+  }
+
+  img.vertical {
+    width: 100%;
+    height: auto;
+  }
+
+  img.horizontal {
+    height: 100%;
+    width: auto;
+  }
 }
