--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -7,23 +7,6 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    
-  
-    img.none {
-      opacity: 0;
-    }
-  
-    img.vertical {
-      width: 100%;
-      height: auto;
-      opacity: 1;
-    }
-  
-    img.horizontal {
-      height: 100%;
-      width: auto;
-      opacity: 1;
-    }
   }
 
   .wrapperImg {
@@ -39,16 +22,17 @@
     position: relative;
     top: -100%;
     right: 0px;
-    transform: rotate(90deg);
+    transform: rotate(180deg);
 
-    &:after{
+    &:after {
       content: "";
       display: block;
       width: 10px;
       height: 10px;
       border-radius: 50%;
       background: #38cc51;
-      margin-top: 5px;
+      margin-top: -2px;
+      border: 2px solid #fff;
     }
   }
 }
