--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -22,17 +22,18 @@
     position: relative;
     top: -100%;
     right: 0px;
-    transform: rotate(180deg);
 
     &:after {
       content: "";
       display: block;
-      width: 10px;
-      height: 10px;
+      width: 10%;
+      height: 10%;
       border-radius: 50%;
       background: #38cc51;
-      margin-top: -2px;
-      border: 2px solid #fff;
+      border: 3px solid #fff;
+      bottom: 5%;
+      right: 5%;
+      position: absolute;
     }
   }
 }
